--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
